# meta

./: ARCHITECTURE.md  PROJECT_GUIDE.md  README.md  RESEARCH_PROPOSAL.md  SELF_CHECK.md  VERIFICATION.md  pyproject.toml  requirements.txt
configs/: datasets.yaml  exp_ablation.yaml  exp_ac_full.yaml  exp_ac_inner.yaml  exp_baselines.yaml  model_base.yaml
scripts/: preprocess_mmp_ac.py  run_all_experiments.sh
src/data/: ac_precompute.py  datasets.py  featurization.py  mpg_builder.py
src/data/processed/: ac_annotations.pkl
src/experiments/: run_ablation.py  run_ac_full.py  run_ac_inner.py  run_baselines.py  sweep_utils.py
src/models/: ac_inner_loop.py  ac_scheduler.py  gnn_encoder.py  gsmeta_core.py  mpg_encoder.py
src/training/: evaluators.py  loops.py  train_meta.py  utils_seed.py
